[package]
name = "aoc2020"
version = "0.1.0"
authors = ["x0f5c3 <x0f5c3@tutanota.com>"]
edition = "2018"


[dependencies]
reqwest = { version = "*", features = ["rustls-tls", "gzip", "blocking"] }
clap = "*"
anyhow = "*"
serde = { version = "1.0.118", features = ["derive"] }
toml = "*"
thiserror = "1.0.22"
dirs = "*"

[workspace]
members = [
	"day_1",
]
